--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         </div>
       </div>
       <div class="row section2">
-        <div class="spain12">
-          Marjeting Section 2
+        <div class="span12">
+          Marketing Section 2
         </div>
       </div>
       <div class="row faq">
